tests/errors/no_superfluous_elseif.php
<?php

declare(strict_types=1);

if (isset($a)) {
    return;
} elseif (isset($b)) {
}
